manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-deployment
  labels:
    app: nitroboost-content
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  selector:
    matchLabels:
      app: content-pod
  template:
    metadata:
      labels:
        app: content-pod
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: kubernetes.io/hostname
      #           operator: In
      #           values:
      #           - nitroboost-m03
      containers:
        - name: content-pod
          image: blurrito/nitroboostcontentservice:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "125m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
      terminationGracePeriodSeconds: 1
