manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-service
  labels:
    app: nitroboost-content
spec:
  type: ClusterIP
  selector:
    app: content-pod
  ports:
    - protocol: TCP
      port: 8081
